objects/X9902Summary__c.object
<CustomObject>
    <description>To capture and summarize demographic and activity data related to the HUD 9902 report.</description>
    <fields>
        <fullName>AMIChosenottorespond__c</fullName>
        <label>Chose Not To Respond</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActivityTypeID__c</fullName>
        <description>Unique identifier assigned to different types of activities or events.</description>
        <label>Activity Type ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                    <label>Activities for All Counseling and Education</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>NOFA 2014-1 COMP</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>NOFA 2014-2 TRNG</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>NOFA 2015-1 COMP</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>NOFA 2015-2 COMP</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>NOFA 2016-1 COMP</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>NOFA 2017-1 COMP</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>NOFA 2018-1 COMP</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>NOFA 2019-1 COMP</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>NOFA 2020-1 COMP</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>NOFA 2021-1 COMP</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>NOFA 2022-1 COMP</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>NOFA 2023-1 COMP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AmericanIndianAlaskanNative__c</fullName>
        <description>Indicates whether the individual identifies as American Indian or Alaskan Native.</description>
        <inlineHelpText>Select this option if the individual identifies as being of American Indian or Alaskan Native descent.</inlineHelpText>
        <label>American Indian/Alaskan Native</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asian__c</fullName>
        <description>Indicates whether the individual identifies as Asian.</description>
        <inlineHelpText>Select this option if the individual identifies as being of Asian descent.</inlineHelpText>
        <label>Asian</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AttendeeCity__c</fullName>
        <label>Attendee City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttendeeEthnicityID__c</fullName>
        <description>Indicates the ethnic identity of the attendee.</description>
        <inlineHelpText>Select the appropriate option to indicate the ethnic identity of the attendee from the provided list of ethnicity categories</inlineHelpText>
        <label>Attendee Ethnicity ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Hispanic</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Not Hispanic</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Chose not to respond</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttendeeFirstTimeHomeBuyer__c</fullName>
        <description>Indicates whether the attendee is a first-time homebuyer.</description>
        <inlineHelpText>Select this option if the attendee is purchasing a home for the first time.</inlineHelpText>
        <label>Attendee First Time Home Buyer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttendeeID__c</fullName>
        <label>Attendee ID </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttendeeIncomeLevel__c</fullName>
        <description>Indicates the income level of the attendee participating in the group session.</description>
        <inlineHelpText>Select the income level of the attendee participating in the group session.</inlineHelpText>
        <label>Attendee Income Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7</fullName>
                    <label>Below 30% of AMI</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>30 - 49% of AMI</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>50 - 79% of AMI</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>80 - 100% of AMI</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Above 100% AMI</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Chose not to respond</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttendeeLimitedEnglishProficiency__c</fullName>
        <description>Indicates whether the attendee has limited proficiency in the English language.</description>
        <inlineHelpText>Select this option if the attendee has limited proficiency in the English language.</inlineHelpText>
        <label>Attendee Limited English Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Limited English Proficient</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Not Limited English Proficient</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Chose not to respond</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttendeeRaceID__c</fullName>
        <description>Indicates the racial identity of the attendee.</description>
        <inlineHelpText>Select the appropriate option to indicate the racial identity of the attendee from the provided list of race categories.</inlineHelpText>
        <label>Attendee Race ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>13</fullName>
                    <label>American Indian/Alaskan Native</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Asian</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Black or African American</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Native Hawaiian or Other Pacific Islander</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>White</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>More than one race</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>Chose not to respond</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttendeeRuralAreaStatus__c</fullName>
        <description>Indicates whether the attendee resides in a rural area.</description>
        <inlineHelpText>Select the appropriate option to indicate whether the attendee resides in a rural area.</inlineHelpText>
        <label>Attendee Rural Area Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Lives in a rural area</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Does not live in a rural area</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Chose not to respond</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttendeeState__c</fullName>
        <label>Attendee State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>AK</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>AL</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>AR</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>AS</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>AZ</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>CA</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>CO</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>CT</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>DC</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>DE</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>FL</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>FM</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>GA</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>GU</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>HI</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>IA</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>ID</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>IL</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>IN</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>KS</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>KY</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>LA</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>MA</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>MD</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>ME</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>MH</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>MI</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>MN</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>MO</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>MP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttendeeZipCode__c</fullName>
        <label>Attendee Zip Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlackorAfricanAmerican__c</fullName>
        <description>Indicates whether the individual identifies as Black or African American.</description>
        <inlineHelpText>Select this option if the individual identifies as being of Black or African American descent.</inlineHelpText>
        <label>Black or African American</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChoseNottoRespond__c</fullName>
        <description>Indicates that the individual chose not to disclose their ethnicity.</description>
        <inlineHelpText>Select this option if the individual declined to provide information about their ethnicity or chose not to disclose it.</inlineHelpText>
        <label>Chose Not To Respond</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompletedDisasterPreparednessWorkshop__c</fullName>
        <description>Indicates that the individual has completed a disaster preparedness workshop.</description>
        <inlineHelpText>Select this option if the individual has successfully completed a workshop focused on preparing for and responding to disasters</inlineHelpText>
        <label>Completed Disaster Preparedness Workshop</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompletedOtherWorkshop__c</fullName>
        <label>Completed other workshop</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completedfairhousingworkshop__c</fullName>
        <description>Indicates that the individual has completed a fair housing workshop.</description>
        <inlineHelpText>Select this option if the individual has successfully completed a workshop that provides information about fair housing</inlineHelpText>
        <label>Completed fair housing workshop</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completedfinancialliteracyworkshop__c</fullName>
        <description>Indicates that the individual has completed a financial literacy workshop.</description>
        <inlineHelpText>Completed financial literacy workshop, including home affordability, budgeting and understanding use of credit.</inlineHelpText>
        <label>Completed financial literacy workshop</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completedpredatorylending__c</fullName>
        <description>Indicates that the individual has completed a workshop on predatory lending</description>
        <inlineHelpText>Completed predatory lending, loan scam or other fraud prevention workshop.</inlineHelpText>
        <label>Completed predatory lending </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completedrentalworkshop__c</fullName>
        <description>Indicates that the individual has completed a rental workshop.</description>
        <inlineHelpText>Select this option if the individual has successfully completed a workshop covering topics related to renting</inlineHelpText>
        <label>Completed rental workshop</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to relate 9902 Summary record of Element Type Group Session with associated Course wiz. sumoapp__additionalInfo__c.</description>
        <inlineHelpText>This field is used to relate 9902 Summary record of Element Type Group Session with associated Course wiz. sumoapp__additionalInfo__c.</inlineHelpText>
        <label>Course</label>
        <referenceTo>sumoapp__AdditionalInfo__c</referenceTo>
        <relationshipLabel>9902 Summary</relationshipLabel>
        <relationshipName>X9902_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DisasterPreparednessAssistance__c</fullName>
        <description>Indicates whether the individual received education or assistance related to disaster preparedness.</description>
        <inlineHelpText>Select this option if the individual received education or assistance on topics related to disaster preparedness, such as creating emergency plans, assembling disaster kits, or accessing community resources in the event of a disaster.</inlineHelpText>
        <label>Disaster Preparedness Assistance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DisasterRecoveryAssistance__c</fullName>
        <description>Indicates whether the individual received assistance related to disaster recovery.</description>
        <inlineHelpText>Select this option if the individual received assistance for disaster recovery, such as financial aid, temporary housing, or support services, following a natural disaster or other catastrophic event.</inlineHelpText>
        <label>Disaster Recovery Assistance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DisasterRecoveryHousingResources__c</fullName>
        <description>Indicates whether individuals gained access to housing resources for disaster recovery.</description>
        <inlineHelpText>Select this option if individuals obtained resources such as temporary housing, rental assistance, or housing rehabilitation programs to aid in their recovery from a disaster.</inlineHelpText>
        <label>Disaster Recovery Housing Resources</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DisasterRecoveryNonhousingResources__c</fullName>
        <description>Indicates whether individuals gained access to non-housing resources for disaster recovery.</description>
        <inlineHelpText>Select this option if individuals obtained resources such as financial assistance, food aid, medical services, or other support to aid in their recovery from a disaster.</inlineHelpText>
        <label>Disaster Recovery Non-housing Resources</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DisasterRecoveryWorkshop__c</fullName>
        <description>Indicates that the individual has completed a disaster recovery workshop.</description>
        <inlineHelpText>Select this option if the individual has successfully completed a workshop that provides guidance on recovering from the aftermath of a disaster</inlineHelpText>
        <label>Disaster Recovery Workshop</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ElementType__c</fullName>
        <label>Element Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>9902</fullName>
                </value>
                <value>
                    <fullName>Attendee</fullName>
                </value>
                <value>
                    <fullName>Group Session Attendee</fullName>
                </value>
                <value>
                    <fullName>Group Session</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmergencyPreparednessPlan__c</fullName>
        <description>Indicates whether individuals developed an emergency preparedness plan.</description>
        <inlineHelpText>Select this option if individuals created a plan outlining steps to take in the event of emergencies, natural disasters, or other crises to ensure safety and minimize risks.</inlineHelpText>
        <label>Emergency Preparedness Plan</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ForwardModImprovedFinancialCapacity__c</fullName>
        <description>Indicates whether individuals improved financial capacity through forward mortgage modifications.</description>
        <inlineHelpText>Select this option if individuals successfully improved their financial capacity</inlineHelpText>
        <label>Forward Mod Improved Financial Capacity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ForwardMortgageDelinquencyorDefault__c</fullName>
        <description>Indicates whether the individual experienced delinquency or default on a forward mortgage.</description>
        <inlineHelpText>Select this option if the individual experienced delinquency or default on a forward mortgage.</inlineHelpText>
        <label>Forward Mortgage Delinquency or Default</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ForwardMortgageModImprovedFinancials__c</fullName>
        <description>Indicates whether individuals improved financials through forward mortgage modifications.</description>
        <inlineHelpText>Select this option if individuals successfully renegotiated the terms of their mortgage to improve their financial situation.</inlineHelpText>
        <label>Forward Mortgage Mod Improved Financials</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GainedAccesstoNonHousingResources__c</fullName>
        <description>Indicates whether the individual gained access to non-housing resources.</description>
        <inlineHelpText>&quot;Households that gained access to non-housing resources (e.g. social service programs, legal services, public benefits
such as Social Security or Medicaid, etc) after receiving Housing Counseling Services.&quot;</inlineHelpText>
        <label>Gained Access to Non-Housing Resources</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GroupAttendeeLimitedEnglishProficiency__c</fullName>
        <description>Indicates whether the attendee has limited proficiency in the English language.</description>
        <label>Attendee Limited English Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Limited English Proficient</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Not Limited English Proficient</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Chose not to respond</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupSessionActivityType__c</fullName>
        <description>Indicates the activity type associated with the group session.</description>
        <inlineHelpText>Select the appropriate activity type from the picklist that corresponds to the group session activity.</inlineHelpText>
        <label>Group Session Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                    <label>Activities for All Counseling and Education</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>NOFA 2014-1 COMP</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>NOFA 2014-2 TRNG</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>NOFA 2015-1 COMP</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>NOFA 2015-2 COMP</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>NOFA 2016-1 COMP</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>NOFA 2017-1 COMP</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>NOFA 2018-1 COMP</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>NOFA 2019-1 COMP</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>NOFA 2020-1 COMP</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>NOFA 2021-1 COMP</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>NOFA 2022-1 COMP</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>NOFA 2023-1 COMP</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>Not Billed to HUD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupSessionAttendeeCity__c</fullName>
        <label>Group Session Attendee City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupSessionAttendeeFeeAmount__c</fullName>
        <description>The amount of fee charged for attending the group session by each attendee.</description>
        <inlineHelpText>Enter the fee amount charged for each attendee to participate in the group session.</inlineHelpText>
        <label>Group Session Attendee Fee Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GroupSessionAttendeeID__c</fullName>
        <label>Group Session Attendee ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupSessionAttendeeIncomeLevel__c</fullName>
        <description>Indicates the income level of the attendee participating in the group session.</description>
        <inlineHelpText>Select the income level of the attendee participating in the group session.</inlineHelpText>
        <label>Group Session Attendee Income Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7</fullName>
                    <label>Below 30% of AMI</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>30 - 49% of AMI</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>50 - 79% of AMI</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>80 - 100% of AMI</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Above 100% AMI</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Chose not to respond</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupSessionAttendeeReferredBy__c</fullName>
        <description>Indicates who referred the attendee to the group session.</description>
        <inlineHelpText>Select the appropriate option to indicate who referred the attendee to the group session.</inlineHelpText>
        <label>Group Session Attendee Referred By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>HUD Outreach</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Agency Outreach</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Another Person</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Lender</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Another Agency</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Real Estate Agent</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupSessionAttendeeRuralAreaStatus__c</fullName>
        <description>Indicates whether the attendee resides in a rural area.</description>
        <inlineHelpText>Select the appropriate option to indicate whether the attendee resides in a rural area.</inlineHelpText>
        <label>Group Session Attendee Rural Area Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Lives in a rural area</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Does not live in a rural area</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Chose not to respond</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>